<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_xsmall"
    android:background="@android:color/transparent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCancelSnack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/deletefood"
        android:paddingTop="@dimen/margin_small"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_checkout_large_cola"
        android:textSize="@dimen/text_small"
        android:textColor="@color/textPrimary"
        android:layout_marginLeft="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_checkout_qty"
            android:textSize="@dimen/text_small"
            android:textColor="@color/textPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_checkout_ticket_count"
            android:textSize="@dimen/text_small"
            android:textColor="@color/textPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_checkout_close"
            android:textSize="@dimen/text_small"
            android:textColor="@color/textPrimary"/>


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFoodPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_checkout_seat_price"
        android:textSize="@dimen/text_small"
        android:textColor="@color/textPrimary"
        android:layout_marginLeft="@dimen/margin_medium"
        android:gravity="end"/>


</LinearLayout>