<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_marginTop="@dimen/margin_medium_2"
    android:layout_marginBottom="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_large_28">

    <LinearLayout
        android:id="@+id/llTimeslot"
        android:layout_width="@dimen/width_vh_time"
        android:layout_height="@dimen/height_vh_time"
        android:orientation="vertical"
        android:background="@drawable/background_cinema_time">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCinemaTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intermedium"
            android:text="@string/lbl_vh_time_clock"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_small"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/tvCinemaTime"
            android:id="@+id/tvCinemaReso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interregular"
            android:text="@string/lbl_vh_time_3d"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_xsmall"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/tvCinemaReso"
            android:id="@+id/tvCinemaScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intermedium"
            android:text="@string/lbl_vh_time_screen"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_xsmall"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/tvCinemaScreen"
            android:id="@+id/tvCinemaAvailible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intermedium"
            android:text="@string/lbl_vh_time_available"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_xsmall"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>