<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.login.LoginActivity"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCinemaLogo"
            android:layout_width="@dimen/width_logging_logo"
            android:layout_height="@dimen/height_logging_logo"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/ivCinemaLogo"
            android:id="@+id/tvVerifyPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsmedium"
            android:text="@string/lbl_logging_verify"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_3x"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/tvVerifyPhoneNo"
            android:id="@+id/tvSendSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_regular"
            android:text="@string/lbl_logging_verify_code"
            android:textColor="@color/textPrimary"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_medium_10"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/tvSendSmsCode"
            android:id="@+id/tvCountryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:text="@string/lbl_logging_country_code"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_marginHorizontal="@dimen/margin_xlarge"/>

        <LinearLayout
            android:layout_below="@id/tvCountryCode"
            android:id="@+id/llCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_medium">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccp_contentColor="@color/white"
                app:ccpDialog_backgroundColor="@color/black"
                app:ccpDialog_textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMobilePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/lbl_logging_hint_phone"
                android:textColorHint="@color/textPrimary"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:text=""/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_below="@+id/llCountryCode"
            android:id="@+id/btnVerifyPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_logging_btn"
            android:fontFamily="@font/dmsmedium"
            android:text="@string/lbl_logging_verify_btn"
            android:textSize="@dimen/text_regular_2x"
            android:background="@drawable/background_logging_button"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginHorizontal="@dimen/margin_xlarge"
            android:layout_centerHorizontal="true"/>

        <View
            android:layout_below="@id/btnVerifyPhoneNo"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_xsmall"
            style="?attr/divider"
            android:background="@color/textSecondary"
            android:layout_margin="@dimen/margin_xlarge"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/btnVerifyPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interregular"
            android:text="@string/lbl_logging_divider_or"
            android:textColor="@color/white"
            android:background="@color/bg"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/margin_medium_2"
            android:paddingRight="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_3"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_below="@id/divider"
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_logging_btn"
            android:src="@drawable/btngoogle"
            android:scaleType="centerCrop"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_centerHorizontal="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsmedium"
            android:text="@string/lbl_logging_policy_terms"
            android:textSize="@dimen/text_small"
            android:textColor="@color/textSecondary"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_large"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>